runtime_loader: Fix incorrect usage of rpath.

This should've been changed to pathString
in 43d1a0dc3c70d1f9c563769881e5be5a7e67842b.

Fixes #18858.